updating social share images

--- a/_posts/2022-06-04-120-walk-lab.markdown
+++ b/_posts/2022-06-04-120-walk-lab.markdown
@@ -6,6 +6,7 @@ audio_id: audio location 120
 accordion: 
   - title: audio transcript
     content: "<p>While walking comes naturally to humans and animals, engineers are still catching up to hundreds of millions of years of evolution.</p><p>]Researchers in the Ronald D. and Regina C. McNeil Walking Robotics Lab are developing legged robots to advance exoskeletons, disaster response, and traversing human-made environments and rough terrain. That in-ground treadmill in the back can be outfitted with obstacles and hit 31 mph and a 20% grade.</p><p>These robots can have any number of legs, but to navigate human environments, researchers like Robotics PhD student Wami Ogunbi focus on bipedal robots.</p><p>My research focuses on bipedal robot locomotion. That is the movement of two legged robots. Our lab has projects from perception and reasoning, which is getting the robot to understand its environment and how to navigate it all the way to controls, which is getting the robot to actually act on its planning algorithms and move robustly through its environment.</p><p>Robotics kind of stumbled onto me in that I did not intentionally plan to get a PhD in robotics my entire life. Rather, I decided that I wanted to be an engineer late into high school, like around junior year. I picked mechanical engineering as my undergrad major because it was what I thought was the most general and would be a great pivot should I decide to specialize in basically any specific domain in engineering.</p><p>I kept mechanical engineering at first in grad school and then wound up in robotics when I decided to work on bipeds. My current hope is to become a professor, to pay it forward in honor of all the mentors that I had throughout my academic career who helped me get to where I'm at today. Robotics isn't easy. Grad school isn't easy, but neither are impossible.</p><p>Robots can have a huge impact, a huge positive impact on lives, and I hope to be part of that change as well as to help others realize their potential and also being part of that change.</p>"
+image: /assets/images/120-walk-lab.jpg
 ---
 
 <div class="audio-player">
