--- a/_posts/2022-06-04-170-mars-yard.markdown
+++ b/_posts/2022-06-04-170-mars-yard.markdown
@@ -6,6 +6,7 @@ audio_id: audio location 170
 accordion: 
   - title: audio transcript
     content: "<p>Just outside these doors, our own piece of the red planet is nestled right here on North Campus.</p><p>Here, students and researchers can test rover and lander concepts on red soil that mimics the Mars’ surface in more than just color, but material as well, which was designed with input from planetary scientists at U-M and NASA JPL.</p><p>In competition, these rovers climb and descend rocky terrain with their custom wheels and suspensions, while conducting science missions of obtaining and testing samples. And, this is all accomplished through remote operation.</p><p>Annie DeCastro of the Michigan Mars Rover team explains the team’s design in detail:</p><p>Our new rover is designed for optimum performance and manufacturability. We've kept our aluminum chassis with rocker bogie suspension and are now using mass on brushless motors in our custom gearboxes. 3D printed wheels on the suspension provide robust climbing capabilities and precise steering. This allows the rover to maneuver through a rock garden and climb slopes up to 45 degrees.</p><p>Our six degree of freedom robotic arm is equipped with cycloidal gearboxes built in-house for strength and control, allowing it to easily carry loads up to ten kilograms. A lead screw driven end effector is capable of grasping objects up to 13 centimeters wide and dexterously completing servicing procedures. Additionally, our inverse kinematics algorithm allows the operator to quickly move the end effector to a precise orientation and position. PCBs along the arm simplify communication and wiring for modularity.</p>"
+image: /assets/images/170-mars-yard.jpg
 ---
 
 <div class="audio-player">
