--- a/_posts/2022-06-04-130-rehab-lab.markdown
+++ b/_posts/2022-06-04-130-rehab-lab.markdown
@@ -6,6 +6,7 @@ audio_id: audio location 130
 accordion: 
   - title: audio transcript
     content: "<p>A theme here is the overlap across robotics research that enables collaboration: work on legged robots and how they move can help create new prosthetics to help humans move, and the work on controlling prosthetics can be brought back to walking robots.</p><p>In this space, mechanics and controls are used to develop advanced prosthetics. A movable “earthquake platform,” or it’s technical name of a Stewart platform, can tilt in any direction, force-feedback plates measure ground contact and a two-belt variable treadmill enables testing of lower-limb prosthetics.</p><p>And when research is being conducted, the glass can turn opaque for privacy during testing. The end focus of this work is to improve day-to-day lives, as PhD student Ross Cortino explains.</p><p>I’m a 3rd-year Ph.D. student working for Dr. Bobby Gregg in the Locomotor Control Systems Laboratory, LocoLab for short. Our primary focus is building and controlling powered prosthetic legs and exoskeletons to improve the quality of life for potential users, focusing on activities of daily living such as walking, stair climbing, and sit-to-stand, as well as transitions between any of these activities.</p><p>Currently, the use of these powered devices is limited to academic or clinical research spaces due to a number of factors including battery life, weight, cost, and lack of comprehensive control strategies that can safely handle anything a potential user would want to throw at it.</p><p>That is why we in the LocoLab are actively committed to designing our devices around users’ needs and working on ways to make adaptive controllers that are not only easy to use but easy for the user and their clinician to understand. We hope this will lead to improved mobility and an overall better experience in their day-to-day lives.</p>"
+image: /assets/images/130-rehab-lab.jpg
 ---
 
 <div class="audio-player">
